--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "codepen-puppeteer",
+  "name": "codepen-polymer-updater",
   "version": "1.0.0",
-  "description": "Automatically update Codepens",
+  "description": "Automatically update Polymer Codepens",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
